# mind_the_gap

./: .gitlab-ci.yml  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_ms.py
.github/workflows/: testing.yml
docker/: Dockerfile
mind_the_gap/: auto_tune.py  chainage.py  mind_the_gap.py  pyproject.toml
mind_the_gap/tests/: test_auto_tune.py  test_chainage.py  test_mind_the_gap.py
mind_the_gap/tests/data/: exp_y_gaps.csv  expected_gaps_points.geojson  expected_gaps_shapes.geojson  expected_write_points.geojson
src/: auto_tune.py  mind_the_gap.py  poland_small_test.py  poland_test.py  progress.py  run_ms.py  run_on_ms_belarus.py  run_philippines_tiles.py  run_tiles.py  test.py
src/features/mind_the_gap/: Dockerfile  chainage.py  mind_the_gap.py  requirements.txt  run_on_ms.py  run_on_ms_moldova.py
src/test_files/: poland_test.py
src/tests/: test_auto_tune.py  test_chainage.py  test_mind_the_gap.py
src/tests/data/: exp_cluster_inters.geojson  exp_grid.geojson  exp_parallel_gaps.gpkg  test_points.geojson
tests/: test_auto_tune.py  test_chainage.py  test_mind_the_gap.py
tests/data/: exp_auto_gaps.gpkg  exp_cluster_inters.gpkg  exp_grid.gpkg  exp_mind_gaps.gpkg  exp_parallel_gaps.gpkg  exp_points.gpkg  exp_x_gaps.csv  expected_gaps_points.gpkg  expected_gaps_shapes.gpkg  expected_write_points.gpkg  slovakia_bound.geojson  slovakia_bound.gpkg  slovakia_chain.geojson  slovakia_chain.gpkg  test_bound.geojson  test_bound.gpkg  test_points.gpkg
